# docs/swagger.json
@@ -1,12 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server for a parking lot service.",
+        "description": "parking-lot-service management. Added sample data in vehicle types,parking lots",
         "title": "Parking Lot API",
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "parkinglot.bibinvinod.online",
     "basePath": "/",
     "paths": {
         "/park-vehicle": {
@@ -382,6 +382,41 @@
                     }
                 }
             }
+        },
+        "/vehicle-types": {
+            "get": {
+                "description": "Get all vehicle types",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "vehicles"
+                ],
+                "summary": "Get vehicle types",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/parking-lot-service_internal_models.VehicleType"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -390,7 +425,7 @@
             "properties": {
                 "ticket_id": {
                     "type": "integer",
-                    "example": 1
+                    "minimum": 1
                 }
             }
         },
@@ -413,20 +448,16 @@
             }
         },
         "parking-lot-service_internal_models.ParkReq": {
-            "description": "ParkReq is the request structure for parking a vehicle",
             "type": "object",
             "properties": {
                 "parking_lot_id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "vehicle_number": {
-                    "type": "string",
-                    "example": "ABC123"
+                    "type": "string"
                 },
                 "vehicle_type_id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 }
             }
         },
@@ -435,40 +466,31 @@
             "type": "object",
             "properties": {
                 "bus_spots": {
-                    "type": "integer",
-                    "example": 5
+                    "type": "integer"
                 },
                 "bus_tariff_daily": {
-                    "type": "number",
-                    "example": 100
+                    "type": "number"
                 },
                 "bus_tariff_hourly": {
-                    "type": "number",
-                    "example": 15
+                    "type": "number"
                 },
                 "car_spots": {
-                    "type": "integer",
-                    "example": 20
+                    "type": "integer"
                 },
                 "car_tariff": {
-                    "type": "number",
-                    "example": 20
+                    "type": "number"
                 },
                 "id": {
-                    "type": "integer",
-                    "example": 1
+                    "type": "integer"
                 },
                 "motorcycle_spots": {
-                    "type": "integer",
-                    "example": 10
+                    "type": "integer"
                 },
                 "motorcycle_tariff": {
-                    "type": "number",
-                    "example": 10
+                    "type": "number"
                 },
                 "name": {
-                    "type": "string",
-                    "example": "Main Parking Lot"
+                    "type": "string"
                 }
             }
         },
@@ -532,7 +554,7 @@
                 },
                 "vehicle_number": {
                     "type": "string",
-                    "example": "ABC123"
+                    "example": "AB01C1234"
                 },
                 "vehicle_type": {
                     "type": "string",
@@ -541,6 +563,20 @@
                 "vehicle_type_id": {
                     "type": "integer",
                     "example": 1
+                }
+            }
+        },
+        "parking-lot-service_internal_models.VehicleType": {
+            "description": "VehicleType holds the vehicle type information",
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "vehicle_type": {
+                    "type": "string",
+                    "example": "Car"
                 }
             }
         }
